# 3dgame

./: CMakeLists.txt  build.ps1
build-mac/: CMakeCache.txt  Makefile  cmake_install.cmake
includes/learnopengl/: root_directory.h
src/7.coin_runner/: 7.coin_runner_model.fs  7.coin_runner_model.vs  coin_runner.cpp
